feat: implement product registration with SKU validation and JPA persistence